Can get language on register
